--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -49,25 +49,25 @@ jobs:
         echo "<settings><servers><server><id>github</id><username>${{ secrets.GITHUB_ACTOR }}</username><password>${{ secrets.GITHUB_TOKEN }}</password></server></servers></settings>" > ~/.m2/settings.xml
 
     - name: Build with Maven (Clean)
-      run: mvn clean
+      run: mvn clean -q -e
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build with Maven (Verify)
-      run: mvn verify
+      run: mvn verify -q -e
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build with Maven (Package) #Optional
-      run: mvn -B package #--file springboot-deploy/pom.xml
+      run: mvn -B package  -q -e #--file springboot-deploy/pom.xml
 
     - name: Prepare release
-      run: mvn release:prepare -B
+      run: mvn release:prepare -B  -q -e
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Perform release
-      run: mvn release:perform -B
+      run: mvn release:perform -B  -q -e
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
