--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,10 +38,11 @@ jobs:
         distribution: 'zulu'
         cache: maven
 
-    # - name: Configure Git
-    #   run: |
-    #     git config --global user.name 'Your Name'
-    #     git config --global user.email 'your-email@example.com'
+    - name: Configure Git
+      run: |
+        git config  user.name 'Chiagozie' #--global
+        git config user.email 'Chiagozie@example.com' #--global
+        # git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
 
     - name: Set up Maven settings
       run: |
