--- a/springboot-deploy/release.properties
+++ b/springboot-deploy/release.properties
@@ -1,11 +1,18 @@
 #release configuration
-#Fri May 31 20:54:15 CDT 2024
-completedPhase=check-poms
+#Fri May 31 20:55:23 CDT 2024
+completedPhase=run-preparation-goals
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
+project.dev.com.justademo\:springboot-deploy=0.0.2-SNAPSHOT
+project.rel.com.justademo\:springboot-deploy=0.0.1
+project.scm.com.justademo\:springboot-deploy.connection=scm\:git\:https\://github.com/themagiccog/maven-deploy-poc.git
+project.scm.com.justademo\:springboot-deploy.developerConnection=scm\:git\:ssh\://git@github.com\:themagiccog/maven-deploy-poc.git
+project.scm.com.justademo\:springboot-deploy.tag=HEAD
+project.scm.com.justademo\:springboot-deploy.url=https\://github.com/themagiccog/maven-deploy-poc
 projectVersionPolicyId=default
 pushChanges=true
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
+scm.tag=springboot-deploy-0.0.1
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
 scm.url=scm\:git\:ssh\://git@github.com\:themagiccog/maven-deploy-poc.git
