prep for release

--- a/springboot-deploy/release.properties
+++ b/springboot-deploy/release.properties
@@ -1,6 +1,7 @@
 #release configuration
-#Fri May 31 20:55:23 CDT 2024
-completedPhase=run-preparation-goals
+#Fri May 31 21:01:41 CDT 2024
+completedPhase=scm-commit-release
+exec.additionalArguments=-DskipTests
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
 project.dev.com.justademo\:springboot-deploy=0.0.2-SNAPSHOT
