--- a/springboot-deploy/pom.xml
+++ b/springboot-deploy/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.justademo</groupId>
 	<artifactId>springboot-deploy</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2</version>
 	<name>springboot-deploy</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -41,7 +41,7 @@
     <connection>scm:git:https://github.com/themagiccog/maven-deploy-poc.git</connection>
     <developerConnection>scm:git:ssh://git@github.com:themagiccog/maven-deploy-poc.git</developerConnection>
     <url>https://github.com/themagiccog/maven-deploy-poc</url>
-    <tag>springboot-deploy-0.0.2</tag>
+    <tag>HEAD</tag>
   </scm>
 	<build>
 		<plugins>
