--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,17 +47,13 @@ jobs:
         git config user.email 'Chiagozie@example.com' #--global
 
     - name: Authenticate with GitHub
-      env:
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run: |
-        git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}.git
+        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
 
     - name: Set up Maven settings
-      env:
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run: |
         mkdir -p ~/.m2
-        echo "<settings><servers><server><id>github</id><username>${{ secrets.GITHUB_ACTOR }}</username><password>${{ secrets.GH_TOKEN }}</password></server></servers></settings>" > ~/.m2/settings.xml
+        echo "<settings><servers><server><id>github</id><username>${{ secrets.GITHUB_ACTOR }}</username><password>${{ secrets.GITHUB_TOKEN }}</password></server></servers></settings>" > ~/.m2/settings.xml
 
     - name: Build with Maven (Clean)
       run: mvn clean -q -e
@@ -73,12 +69,12 @@ jobs:
         mvn clean
         mvn release:prepare -B  -q -e -Darguments=-DskipTests
       env:
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Perform release
       run: mvn release:perform -B  -q -e -Darguments=-DskipTests
       env:
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   #   - name: Deploy to Maven Central
   #     run: mvn deploy -P release
