--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -67,12 +67,12 @@ jobs:
     - name: Prepare release
       run: |
         mvn clean
-        mvn release:prepare -B  -q -e -Darguments=-DskipTests
+        mvn release:prepare -B -X -q -e -Darguments=-DskipTests
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Perform release
-      run: mvn release:perform -B  -q -e -Darguments=-DskipTests -Dproject.scm.credentials="themagiccog:${{ secrets.GITHUB_TOKEN }}"
+      run: mvn release:perform -B -X -q -e -Darguments=-DskipTests -Dproject.scm.credentials="themagiccog:${{ secrets.GITHUB_TOKEN }}"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
