--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -124,7 +124,8 @@ jobs:
 
     - name: Authenticate with GitHub
       run: |
-        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+        #git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+        git remote set-url origin https://${{ secrets.GITHUB_ACTOR }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
 
     - name: Set up Maven settings
       run: |
