--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,8 +45,8 @@ jobs:
 
     - name: Authenticate with GitHub
       run: |
-        #git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
-        git remote set-url origin https://${{ secrets.GITHUB_ACTOR }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+        #git remote set-url origin https://${{ secrets.GITHUB_ACTOR }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
 
     - name: Set up Maven settings
       run: |
@@ -65,12 +65,12 @@ jobs:
     - name: Prepare release
       run: |
         mvn clean
-        mvn release:prepare -B -X -q -e -Darguments=-DskipTests
+        mvn release:prepare -B -q -e -Darguments=-DskipTests
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Perform release
-      run: mvn release:perform -B -X -q -e -Darguments=-DskipTests
+      run: mvn release:perform -B -q -e -Darguments=-DskipTests
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
