--- a/springboot-deploy/pom.xml
+++ b/springboot-deploy/pom.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.3.0</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.justademo</groupId>
 	<artifactId>springboot-deploy</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>springboot-deploy</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -42,7 +43,7 @@
     <!-- <developerConnection>scm:git:ssh://git@github.com:themagiccog/maven-deploy-poc.git</developerConnection> -->
     <developerConnection>scm:git:https://github.com/themagiccog/maven-deploy-poc.git</developerConnection>
     <url>https://github.com/themagiccog/maven-deploy-poc</url>
-    <tag>springboot-deploy-0.0.1</tag>
+    <tag>HEAD</tag>
   </scm>
 	<build>
 		<plugins>
