--- a/springboot-deploy/pom.xml
+++ b/springboot-deploy/pom.xml
@@ -61,20 +61,22 @@
 			</plugin>
 		</plugins>
 	</build>
-	<profile>
-		<id>my-github-maven-repo</id>
-		<distributionManagement>
-			<repository>
-				<id>my-github-maven-repo</id>
-				<name>GitHub Springboot Deploy Maven Packages</name>
-				<url>https://maven.pkg.github.com/themagiccog/maven-deploy-poc</url>
-			</repository>
-			<snapshotRepository>
-				<id>my-github-maven-repo</id>
-				<name>GitHub Springboot Deploy Maven Snapshots</name>
-				<url>https://maven.pkg.github.com/themagiccog/maven-deploy-poc</url>
-			</snapshotRepository>
-		</distributionManagement>
-	</profile>
+	<profiles>
+		<profile>
+			<id>my-github-maven-repo</id>
+			<distributionManagement>
+				<repository>
+					<id>my-github-maven-repo</id>
+					<name>GitHub Springboot Deploy Maven Packages</name>
+					<url>https://maven.pkg.github.com/themagiccog/maven-deploy-poc</url>
+				</repository>
+				<snapshotRepository>
+					<id>my-github-maven-repo</id>
+					<name>GitHub Springboot Deploy Maven Snapshots</name>
+					<url>https://maven.pkg.github.com/themagiccog/maven-deploy-poc</url>
+				</snapshotRepository>
+			</distributionManagement>
+		</profile>
+	</profiles>
 
 </project>
