--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,7 +47,7 @@ jobs:
 
     - name: Configure Git
       run: |
-        git config --global user.name 'Chiagozie'
+        git config --global user.name 'XchiagozieX'
         git config --global user.email 'Chiagozie@example.com'
 
     - name: Authenticate with GitHub
@@ -57,8 +57,9 @@ jobs:
 
     - name: Set up Maven settings
       run: |
-        mkdir -p .m2
-        echo "<settings><servers><server><id>github</id><username>${{ secrets.GITHUB_ACTOR }}</username><password>${{ secrets.GH_TOKEN }}</password></server></servers></settings>" > .m2/settings.xml
+        mkdir -p ~/.m2
+        echo "<settings><servers><server><id>github</id><username>${{ github.actor }}</username><password>${{ secrets.GH_TOKEN }}</password></server></servers></settings>" > ~/.m2/settings.xml
+        cat ~/.m2/settings.xml
 
     - name: Build with Maven (Clean)
       run: mvn clean -q -e
@@ -94,7 +95,8 @@ jobs:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
     - name: Perform release
-      run: mvn release:perform -B -X -q -e -Darguments=-DskipTests -P github
+      run: |
+        mvn release:perform -B -X -q -e -Darguments=-DskipTests -P github #"-DskipTests -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/themagiccog/maven-deploy-poc -Dusername=${{ github.actor }} -Dpassword=${{ secrets.GH_TOKEN }}"
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
